--- a/src/main/resources/com/example/rewear/hello-view.fxml
+++ b/src/main/resources/com/example/rewear/hello-view.fxml
@@ -2,12 +2,25 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rewear.HelloController">
-   <children>
-      <Label fx:id="UserNameLabel" layoutX="224.0" layoutY="144.0" prefHeight="17.0" prefWidth="210.0" text="usernam" />
-      <Button fx:id="ConnectButton" layoutX="224.0" layoutY="200.0" mnemonicParsing="false" text="connect " />
-   </children>
-</AnchorPane>
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rewear.HelloController">
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+    </padding>
+    
+    <Label text="Welcome to Rewear" style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
+    
+    <VBox spacing="10.0" alignment="CENTER">
+        <Label text="Username:" style="-fx-font-size: 14px;"/>
+        <TextField fx:id="usernameField" promptText="Enter your username" prefWidth="200.0"/>
+    </VBox>
+    
+    <Button fx:id="ConnectButton" text="Connect" style="-fx-font-size: 14px; -fx-pref-width: 120px; -fx-pref-height: 35px;"/>
+    
+    <Label fx:id="welcomeText" text="" style="-fx-font-size: 14px;"/>
+</VBox>
