--- a/src/main/resources/com/example/rewear/views/product-list-view.fxml
+++ b/src/main/resources/com/example/rewear/views/product-list-view.fxml
@@ -6,13 +6,15 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox spacing="10" styleClass="main-container" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rewear.controller.ProductController">
+<VBox spacing="10" styleClass="main-container" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" 
+      fx:controller="com.example.rewear.controller.ProductController">
     
     <!-- Header Section -->
     <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header">
@@ -32,10 +34,34 @@
         
         <!-- Navigation Icons -->
         <HBox alignment="CENTER_RIGHT" spacing="30">
-            <Button fx:id="cartButton" styleClass="nav-button" text="Cart" />
-            <Button fx:id="wishlistButton" styleClass="nav-button" text="Wishlist" />
-            <Button fx:id="ordersButton" styleClass="nav-button" text="Orders" />
-            <Button fx:id="logoutButton" styleClass="nav-button" text="Log out" />
+            <Button fx:id="cartButton" styleClass="nav-button" text="Cart">
+                <graphic>
+                    <ImageView fitHeight="20" fitWidth="20">
+                        <Image url="@../images/cart-icon.png"/>
+                    </ImageView>
+                </graphic>
+            </Button>
+            <Button fx:id="wishlistButton" styleClass="nav-button" text="Wishlist">
+                <graphic>
+                    <ImageView fitHeight="20" fitWidth="20">
+                        <Image url="@../images/heart-icon.png"/>
+                    </ImageView>
+                </graphic>
+            </Button>
+            <Button fx:id="ordersButton" styleClass="nav-button" text="Orders">
+                <graphic>
+                    <ImageView fitHeight="20" fitWidth="20">
+                        <Image url="@../images/order-icon.png"/>
+                    </ImageView>
+                </graphic>
+            </Button>
+            <Button fx:id="logoutButton" styleClass="nav-button" text="Log out">
+                <graphic>
+                    <ImageView fitHeight="20" fitWidth="20">
+                        <Image url="@../images/logout-icon.png"/>
+                    </ImageView>
+                </graphic>
+            </Button>
         </HBox>
     </HBox>
 
@@ -45,6 +71,13 @@
             <Insets bottom="10" left="20" right="20" top="10" />
         </padding>
         <TextField fx:id="searchField" promptText="Search for products" styleClass="search-field" HBox.hgrow="ALWAYS" />
+        <Button fx:id="searchButton" styleClass="search-button" mnemonicParsing="false">
+            <graphic>
+                <ImageView fitHeight="20" fitWidth="20">
+                    <Image url="@../images/search-icon.png"/>
+                </ImageView>
+            </graphic>
+        </Button>
     </HBox>
 
     <!-- Categories Section -->
