--- a/src/main/resources/com/example/rewear/views/product-list-view.fxml
+++ b/src/main/resources/com/example/rewear/views/product-list-view.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -23,13 +24,21 @@
         </padding>
         
         <!-- User Profile Section -->
-        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="265.0" spacing="10" HBox.hgrow="ALWAYS">
+        <HBox alignment="CENTER_LEFT" spacing="10">
             <ImageView fx:id="userAvatar" fitHeight="40" fitWidth="40" styleClass="user-avatar" />
             <Text fx:id="welcomeText" styleClass="welcome-text" text="Welcome, User">
                 <font>
                     <Font name="System Bold" size="18" />
                 </font>
             </Text>
+        </HBox>
+
+        <!-- Search Section -->
+        <HBox alignment="CENTER" spacing="10" HBox.hgrow="ALWAYS">
+            <HBox alignment="CENTER" spacing="0" styleClass="search-container" HBox.hgrow="ALWAYS">
+                <TextField fx:id="searchField" promptText="Search for products" styleClass="search-field" HBox.hgrow="ALWAYS" />
+                <Button fx:id="searchButton" styleClass="search-button" text="Search" />
+            </HBox>
         </HBox>
         
         <!-- Navigation Icons -->
@@ -65,20 +74,23 @@
         </HBox>
     </HBox>
 
-    <!-- Search Section -->
-    <HBox alignment="CENTER" spacing="10">
-        <padding>
-            <Insets bottom="10" left="20" right="20" top="10" />
-        </padding>
-        <TextField fx:id="searchField" promptText="Search for products" styleClass="search-field" HBox.hgrow="ALWAYS" />
-        <Button fx:id="searchButton" styleClass="search-button" mnemonicParsing="false">
-            <graphic>
-                <ImageView fitHeight="20" fitWidth="20">
-                    <Image url="@../images/search-icon.png"/>
-                </ImageView>
-            </graphic>
-        </Button>
-    </HBox>
+    <!-- Category Navigation -->
+    <ScrollPane styleClass="categories-scroll" fitToWidth="true">
+        <HBox spacing="10" styleClass="categories-container">
+            <padding>
+                <Insets top="10" right="20" bottom="10" left="20"/>
+            </padding>
+            <Button fx:id="allCategoryButton" text="All" styleClass="category-button" onAction="#handleCategoryFilter"/>
+            <Button fx:id="womenCategoryButton" text="Women" styleClass="category-button" onAction="#handleCategoryFilter"/>
+            <Button fx:id="menCategoryButton" text="Men" styleClass="category-button" onAction="#handleCategoryFilter"/>
+            <Button fx:id="kidsCategoryButton" text="Kids" styleClass="category-button" onAction="#handleCategoryFilter"/>
+            <Button fx:id="accessoriesCategoryButton" text="Accessories" styleClass="category-button" onAction="#handleCategoryFilter"/>
+            <Button fx:id="shoesCategoryButton" text="Shoes" styleClass="category-button" onAction="#handleCategoryFilter"/>
+            <Button fx:id="bagsCategoryButton" text="Bags" styleClass="category-button" onAction="#handleCategoryFilter"/>
+            <Button fx:id="jewelryCategoryButton" text="Jewelry" styleClass="category-button" onAction="#handleCategoryFilter"/>
+            <Button fx:id="sportswearCategoryButton" text="Sportswear" styleClass="category-button" onAction="#handleCategoryFilter"/>
+        </HBox>
+    </ScrollPane>
 
     <!-- Admin Controls Section -->
     <HBox alignment="CENTER_RIGHT" spacing="10">
