--- a/src/main/resources/com/example/rewear/Gestionevent/ListEvent.fxml
+++ b/src/main/resources/com/example/rewear/Gestionevent/ListEvent.fxml
@@ -44,6 +44,7 @@
                         <Button fx:id="refreshButton" mnemonicParsing="false" onAction="#handleRefresh" prefHeight="30.0" prefWidth="120.0" text="Actualiser" />
                         <Button fx:id="addButton" mnemonicParsing="false" onAction="#handleAdd" prefHeight="30.0" prefWidth="120.0" text="Ajouter" />
                         <Button fx:id="editButton" mnemonicParsing="false" onAction="#handleEdit" prefHeight="30.0" prefWidth="120.0" text="Modifier" />
+                        <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#handleDelete" prefHeight="30.0" prefWidth="120.0" text="Supprimer" />
                     </children>
                 </HBox>
             </children>
